# pyparrot

./: .env.example  .gitignore  .gitmodules  EXTERNAL_BACKENDS_WORKFLOW.md  LICENSE  Makefile  PROJECT_SUMMARY.py  README.md  SETUP_CHECKLIST.md  pyproject.toml  requirements.txt  setup_project.py
components/dex/: Dockerfile  entrypoint.sh
components/dex/frontend/: README.md  login.html  styles.css
components/kafka_post_task/: run.py
config/: Do.sh
config/e2e-local/: docker-compose.yaml
config/e2e-local/dex/: dex.env
config/e2e-local/traefik/: traefik.yaml
config/jniehues-cascaded/: docker-compose.yaml
config/jniehues-cascaded/dex/: dex.env  dex.yaml
config/jniehues-cascaded/traefik/: traefik.yaml
config/jniehues-end2end/: docker-compose.yaml
config/jniehues-end2end/dex/: dex.env
config/jniehues-end2end/traefik/: traefik.yaml
docs/: ARCHITECTURE.md  CLI_REFERENCE.md  GETTING_STARTED.md  PROJECT_SETUP.md
examples/: boom.yaml  chatbot.yaml  config.yaml  e2e-local.yaml  eval_dataset.json  example_usage.py  lecture-translator.yaml
examples/chatbot_config/: bots.json
pyparrot/: __init__.py  cli.py  config.py  docker_manager.py  evaluator.py  pipeline.py  pipeline_types.py  template_manager.py
pyparrot/components/: __init__.py
pyparrot/templates/: __init__.py
pyparrot/templates/dex/: dex.yaml.tpl
pyparrot/templates/docker/: __init__.py  asr.yaml  boom.yaml  chat_ui.yaml.tpl  dialog.yaml  lt_ui.yaml.tpl  markup.yaml  middleware.yaml  middleware.yaml.tpl  (+2 more)
tests/: test_config.py  test_evaluator.py  test_pipeline.py  test_template_manager.py
(+15 files in other folders)
