[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyparrot"
version = "0.1.0"
description = "CLI for controlling Docker pipelines of speech and LLM components"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
dependencies = [
    "click>=8.1.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "docker>=6.0.0",
    "python-dotenv>=1.0.0",
    "bcrypt>=4.0.0",
    "jinja2>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[project.scripts]
pyparrot = "pyparrot.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["pyparrot*"]
exclude = ["tests*", "config*"]
